--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,9 +1,8 @@
 <div class='container'>
   <nav class='navbar navbar-default' role='navigation'>
-      <h1 class="top">Auction</h1>
+      <h1 class="top">Ostentatious Auction</h1>
     <ul class='nav navbar-nav'>
       <li class="navvy">{{#link-to 'lots'}}Lots{{/link-to}}</li>
-      <li>{{#link-to 'recent-items'}}Recent items{{/link-to}}</li>
       <li>{{#link-to 'about'}}About{{/link-to}}</li>
       <li>{{#link-to 'contact'}}Contact{{/link-to}}</li>
     </ul>
