--- a/templates/contact.hbs
+++ b/templates/contact.hbs
@@ -1,6 +1,6 @@
 <h1>Contact</h1>
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-xs-6">
     <p>
       Want to get in touch?
       <ul>
@@ -8,21 +8,8 @@
         <li>{{#link-to 'email'}}Email{{/link-to}}</li>
       </ul>
     </p>
-
-    {{#if messageSent}}
-      <p>
-        Thank you. Your message has been sent.
-        Your confirmation number is {{confirmationNumber}}.
-      </p>
-    {{else}}
-      <p>
-        Or, click here to send a secret message:
-      </p>
-
-      <button class="btn btn-primary" {{action 'sendMessage'}}>Send message</button>
-    {{/if}}
   </div>
-  <div class="col-md-6">
+  <div class="col-xs-6">
     {{outlet}}
   </div>
 </div>
