--- a/templates/email.hbs
+++ b/templates/email.hbs
@@ -1,5 +1,3 @@
 <h2>Email</h2>
 
-<p>
-  <span class="glyphicon glyphicon-envelope"></span> Email count@dracula.com.
-</p>
+<p>Email: OstentatiousAuction@FakeEmail.com.</p>
