--- a/templates/new-item.hbs
+++ b/templates/new-item.hbs
@@ -3,9 +3,19 @@
 <form>
   <div class="form-group">
     <label for="name">Item name:</label>
-    {{input value=name id="name" class="form-control"}}
+    {{input value=name id="name" class="form-control" autofocus="autofocus"}}
     <label for="photo">Link to Photo:</label>
     {{input value=photo id="photo" class="form-control"}}
+    <label for="estimate">Price Estimate:</label>
+    {{input value=estimate id="estimate" class="form-control"}}
+    <label for="backstory">Backstory:</label>
+    {{textarea value=backstory id="backstory" class="form-control" rows="5"}}
+    <label for="year_acquired">Year Acquired:</label>
+    {{input value=year-acquired id="year-acquired" class="form-control"}}
+    <label for="owner">Owner:</label>
+    {{input value=owner id="owner" class="form-control"}}
+    <label for="description">Description:</label>
+    {{input value=description id="description" class="form-control"}}
   </div>
 
   <button class="btn btn-primary" {{action "save"}}>Add your item</button>
