--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,32 @@ body {
   font-family: 'Lobster', cursive;
 }
 
+h1 {
+  color: #000;
+  text-align: center;
+}
+
+h2, h3, h4 {
+  color: #000;
+}
+
+hr {
+  display: block; height: 1px;
+  border: 0; border-top: 1px solid #000;
+  margin: 1em 0; padding: 0;
+}
+
 li {
   font-size: 150%;
+  color: #000;
+}
+
+a {
+  color: #000;
+}
+
+a:hover {
+  color: #D4AF37;
 }
 
 .navbar {
