--- a/templates/lot.hbs
+++ b/templates/lot.hbs
@@ -25,12 +25,14 @@
 <h2>Items</h2>
 
 {{#each item in items itemController="item"}}
+  <hr>
   <p>
     {{item.name}} ${{item.estimate}}<br>
     <img {{bind-attr src=item.photo}} width="20%" height="20%" alt="Logo">
 
     <button class="btn btn-xs btn-danger" {{action 'delete'}}>Delete</button>
   </p>
+  <hr>
 {{/each}}
 
-<p>{{#link-to 'new-item' this class="btn btn-success"}}New item{{/link-to}}</p>
+<p>{{#link-to 'new-item' this class="btn btn-primary"}}New item{{/link-to}}</p>
