--- a/templates/new-item.hbs
+++ b/templates/new-item.hbs
@@ -9,7 +9,7 @@
     <label for="estimate">Price Estimate:</label>
     {{input value=estimate id="estimate" class="form-control"}}
     <label for="backstory">Backstory:</label>
-    {{textarea value=backstory id="backstory" class="form-control" rows="5"}}
+    {{input value=backstory id="backstory" class="form-control"}}
     <label for="year_acquired">Year Acquired:</label>
     {{input value=year-acquired id="year-acquired" class="form-control"}}
     <label for="owner">Owner:</label>
