--- a/templates/new-item.hbs
+++ b/templates/new-item.hbs
@@ -10,8 +10,8 @@
     {{input value=estimate id="estimate" class="form-control"}}
     <label for="backstory">Backstory:</label>
     {{input value=backstory id="backstory" class="form-control"}}
-    <label for="year_acquired">Year Acquired:</label>
-    {{input value=year-acquired id="year-acquired" class="form-control"}}
+    <label for="yearacquired">Year Acquired:</label>
+    {{input value=yearacquired id="yearacquired" class="form-control"}}
     <label for="owner">Owner:</label>
     {{input value=owner id="owner" class="form-control"}}
     <label for="description">Description:</label>
