--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,6 +1,6 @@
 <div class='container'>
   <nav class='navbar navbar-default' role='navigation'>
-      <h1 class="top">O$tentat¢iou$ Auction</h1>
+      <h1 class="top">O$tentatiou$ Au¢tion</h1>
     <ul class="nav navbar-nav navbar-left">
       <li><img class="rotate" src="css/star.png" style="margin-left:7px;"></li>
     </ul>
